--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Dommy.Business\packages.config" />
   <repository path="..\Dommy.Console\packages.config" />
+  <repository path="..\Dommy.Web.Tests\packages.config" />
+  <repository path="..\Dommy.Web\packages.config" />
 </repositories>
