--- a/Dommy.Business/packages.config
+++ b/Dommy.Business/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CassiniDev" version="5.0.2-bleeding-17" targetFramework="net45" />
+  <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
-  <package id="NAudio" version="1.5" targetFramework="net40" />
+  <package id="NAudio" version="1.6" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
   <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net45" />
   <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net40" />
