Add first display tile

--- a/Dommy.Console/App.config
+++ b/Dommy.Console/App.config
@@ -14,7 +14,13 @@
       </layout>
     </appender>
 
-    <appender name="ConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
+    <appender name="WebAppender" type="Dommy.Business.Tools.WebAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+      </layout>
+    </appender>
+
+  <appender name="ConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
       <mapping>
         <level value="ERROR" />
         <foreColor value="Red" />
@@ -36,6 +42,7 @@
       <level value="DEBUG" />
       <appender-ref ref="ConsoleAppender" />
       <appender-ref ref="RollingLogFileAppender" />
+      <appender-ref ref="WebAppender" />
     </root>
   </log4net>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" /></startup>
