--- a/Dommy.Business/Dommy.Business.csproj
+++ b/Dommy.Business/Dommy.Business.csproj
@@ -44,6 +44,9 @@
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.0\lib\net40-full\log4net.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Client">
+      <HintPath>..\packages\Microsoft.AspNet.SignalR.Client.1.1.2\lib\net45\Microsoft.AspNet.SignalR.Client.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Kinect, Version=1.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft SDKs\Kinect\v1.5\Assemblies\Microsoft.Kinect.dll</HintPath>
@@ -55,6 +58,9 @@
     <Reference Include="NAudio, Version=1.6.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\NAudio.1.6\lib\net20\NAudio.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Ninject">
       <HintPath>..\packages\Ninject.3.0.1.10\lib\net40\Ninject.dll</HintPath>
@@ -73,6 +79,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -134,14 +141,29 @@
     <Compile Include="Scripts\CSharpScriptEngine.cs" />
     <Compile Include="Scripts\IScriptEngine.cs" />
     <Compile Include="Scripts\ScriptEngine.cs" />
+    <Compile Include="Services\Client.cs" />
+    <Compile Include="Services\IEngine.cs" />
+    <Compile Include="Services\IServiceHost.cs" />
+    <Compile Include="Services\ITileManager.cs" />
+    <Compile Include="Services\IWebServerHost.cs" />
     <Compile Include="Speech\SpeechToTextConfig.cs" />
     <Compile Include="Syntax\IExtendSyntax.cs" />
     <Compile Include="Syntax\IScenarioDescriptionConfig.cs" />
     <Compile Include="Syntax\IScenarioSyntax.cs" />
+    <Compile Include="Syntax\ITriggerScenarioSyntax.cs" />
     <Compile Include="Syntax\ITriggerSyntax.cs" />
     <Compile Include="Syntax\ScenarioContext.cs" />
+    <Compile Include="Tile.cs" />
+    <Compile Include="TileManager.cs" />
     <Compile Include="Tools\ITvHelper.cs" />
     <Compile Include="Actions\IUrlActions.cs" />
+    <Compile Include="Tools\WebAppender.cs" />
+    <Compile Include="Triggers\ITileTriggerSyntax.cs" />
+    <Compile Include="Triggers\ITimeTriggerSyntax.cs" />
+    <Compile Include="Triggers\TileTrigger.cs" />
+    <Compile Include="Triggers\TileTriggerSyntax.cs" />
+    <Compile Include="Triggers\TimeTrigger.cs" />
+    <Compile Include="Triggers\TimeTriggerSyntax.cs" />
     <Compile Include="Triggers\UsbUirtTriggerSyntax.cs" />
     <Compile Include="Triggers\UsbUirtTrigger.cs" />
     <Compile Include="Triggers\IUsbUirtTriggerSyntax.cs" />
@@ -178,7 +200,9 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dommy.Model\Dommy.Model.csproj">
       <Project>{7605e203-fa9c-42f1-92b8-123fef17d045}</Project>
