--- a/Dommy.Business/packages.config
+++ b/Dommy.Business/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CassiniDev" version="5.0.2-bleeding-17" targetFramework="net45" />
   <package id="Common.Logging" version="2.1.2" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.SignalR.Client" version="1.1.2" targetFramework="net45" />
   <package id="NAudio" version="1.6" targetFramework="net45" />
