--- a/Dommy.Console/packages.config
+++ b/Dommy.Console/packages.config
@@ -5,4 +5,6 @@
   <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net45" />
   <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net40-Client" />
   <package id="Ninject.Extensions.Logging.Log4net" version="3.0.1.0" targetFramework="net40-Client" />
+  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
+  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
 </packages>
