--- a/Dommy.Extensions.Kinect/Dommy.Extensions.Kinect.csproj
+++ b/Dommy.Extensions.Kinect/Dommy.Extensions.Kinect.csproj
@@ -58,11 +58,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HelloSkeletonCheck.cs" />
+    <Compile Include="ISkeletonCheck.cs" />
+    <Compile Include="KinectScenarioSyntax.cs" />
     <Compile Include="KinectSensorSelector.cs" />
     <Compile Include="KinectSkeletonListener.cs" />
+    <Compile Include="KinectSkeletonTrigger.cs" />
     <Compile Include="KinectSpeechToText.cs" />
     <Compile Include="MicrosoftTextToSpeech.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="HelloScenarioDescription.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dommy.Business\Dommy.Business.csproj">
