--- a/Dommy.Web/Web.config
+++ b/Dommy.Web/Web.config
@@ -6,7 +6,7 @@
 
 <configuration>
   <appSettings>
-    <add key="webpages:Version" value="2.0.0.0" />
+    <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
@@ -14,32 +14,22 @@
   </appSettings>
 
   <system.web>
-    
-    <httpRuntime targetFramework="4.5" />
-    
-    <compilation debug="true" targetFramework="4.5" />
 
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
-      </namespaces>
-    </pages>
+    <httpRuntime targetFramework="4.5" />
+
+    <compilation debug="true" targetFramework="4.5" />
   </system.web>
 
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-     
-  <handlers>
+
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -80,5 +70,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-
 </configuration>
