--- a/Dommy.Web/Dommy.Web.csproj
+++ b/Dommy.Web/Dommy.Web.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Hubs\Logger.cs" />
     <Compile Include="Models\HomeIndexModel.cs" />
     <Compile Include="Models\HomeTileRenderModel.cs" />
+    <Compile Include="Models\SectionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -185,13 +186,10 @@
       <DependentUpon>Dommy.less</DependentUpon>
     </Content>
     <Content Include="Css\Dommy.min.css">
-      <DependentUpon>Dommy.less</DependentUpon>
+      <DependentUpon>Dommy.css</DependentUpon>
     </Content>
     <Content Include="Global.asax" />
     <Content Include="Css\Dommy.less" />
-    <Content Include="Css\Dommy.css.map">
-      <DependentUpon>Dommy.css</DependentUpon>
-    </Content>
     <None Include="Scripts\jquery-2.1.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.0.js" />
     <Content Include="Scripts\jquery-2.1.0.min.js" />
