--- a/Dommy.Console/App.config
+++ b/Dommy.Console/App.config
@@ -50,6 +50,11 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <probing privatePath="bin" />
       <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Kinect" publicKeyToken="407dd0808d44fbdc" />
+        <!--<codeBase version="1.8.0.0" href="Kinect\Castle.DynamicProxy2.dll" />-->
+        <codeBase version="2.0.0.0" href="Microsoft.Kinect.dll" />
+      </dependentAssembly>
+      <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
