--- a/Dommy.Console/App.config
+++ b/Dommy.Console/App.config
@@ -3,7 +3,7 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
-  <log4net debug="true">
+  <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <file value="c:\temp\dommy.log" />
       <appendToFile value="true" />
