--- a/Dommy.Business/Dommy.Business.csproj
+++ b/Dommy.Business/Dommy.Business.csproj
@@ -290,6 +290,10 @@
   <ItemGroup>
     <EmbeddedResource Include="Scenarios\OnOffLightScenarioTile.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Scenarios\Light-Off.png" />
+    <EmbeddedResource Include="Scenarios\Light-On.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
