--- a/Dommy.Business/packages.config
+++ b/Dommy.Business/packages.config
@@ -10,7 +10,7 @@
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net40" />
   <package id="Ninject.Extensions.Conventions" version="3.0.0.11" targetFramework="net45" />
-  <package id="Ninject.Extensions.Factory" version="3.0.2-unstable-9020" targetFramework="net45" />
+  <package id="Ninject.Extensions.Factory" version="3.0.1.0" targetFramework="net45" />
   <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net40" />
   <package id="Ninject.Extensions.Logging.Log4net" version="3.0.1.0" targetFramework="net40" />
   <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
