Add begin settings

--- a/Dommy.Business/Dommy.Business.csproj
+++ b/Dommy.Business/Dommy.Business.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Configs\IConfig.cs" />
     <Compile Include="Configs\ISettings.cs" />
     <Compile Include="Configs\Settings.cs" />
+    <Compile Include="Configs\SettingsInfo.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="GrammarChoices.cs" />
     <Compile Include="GrammarData.cs" />
