--- a/Dommy.Business.Test/packages.config
+++ b/Dommy.Business.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.0.0.4001" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
   <package id="Ninject.Extensions.Logging" version="3.0.1.0" targetFramework="net45" />
