--- a/Dommy.Extensions.Kinect.Sdk1.Tests/Dommy.Extensions.Kinect.Sdk1.Tests.csproj
+++ b/Dommy.Extensions.Kinect.Sdk1.Tests/Dommy.Extensions.Kinect.Sdk1.Tests.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Kinect, Version=1.8.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -50,8 +51,22 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="SkeletonSdk1Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dommy.Business\Dommy.Business.csproj">
+      <Project>{0D4C5AF6-942D-49E2-8034-A2B87D159CE8}</Project>
+      <Name>Dommy.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dommy.Extensions.Kinect.Sdk1\Dommy.Extensions.Kinect.Sdk1.csproj">
+      <Project>{b5d5034a-7760-4db0-b4e2-5f636a33d6bc}</Project>
+      <Name>Dommy.Extensions.Kinect.Sdk1</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Dommy.Extensions.Kinect\Dommy.Extensions.Kinect.csproj">
+      <Project>{FDCFB3E9-D345-480B-9D1E-7FC7179BC45F}</Project>
+      <Name>Dommy.Extensions.Kinect</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
