--- a/Dommy.Extensions.Kinect.Tests/Dommy.Extensions.Kinect.Tests.csproj
+++ b/Dommy.Extensions.Kinect.Tests/Dommy.Extensions.Kinect.Tests.csproj
@@ -50,8 +50,15 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="MovementCheckerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StubSkeleton.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Dommy.Extensions.Kinect\Dommy.Extensions.Kinect.csproj">
+      <Project>{fdcfb3e9-d345-480b-9d1e-7fc7179bc45f}</Project>
+      <Name>Dommy.Extensions.Kinect</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
