--- a/Dommy.Extensions.Kinect/Dommy.Extensions.Kinect.csproj
+++ b/Dommy.Extensions.Kinect/Dommy.Extensions.Kinect.csproj
@@ -61,10 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IJointType.cs" />
     <Compile Include="IKinectSkeletonListener.cs" />
     <Compile Include="ISkeleton.cs" />
     <Compile Include="ISkeletonListener.cs" />
+    <Compile Include="JointType.cs" />
+    <Compile Include="Vector.cs" />
+    <Compile Include="MovementChecker.cs" />
     <Compile Include="RecordSkeletonScenarioDescription.cs" />
     <Compile Include="HelloSkeletonCheck.cs" />
     <Compile Include="ISkeletonCheck.cs" />
